# avr-cmake-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  project.yml  setup.ps1
.github/workflows/: ci.yml  release.yml
cmake/: avr-gcc-toolchain.cmake
src/: debug.c  main.c
test/: test_example_test.c
